fix(api): fix OnComponentCondition may cause StackOverflow exception